--- a/package.json
+++ b/package.json
@@ -20,6 +20,20 @@
 	"activationEvents": [
 		"onLanguage:WISL"
 	],
+	"contributes":{
+		"configuration":[
+			{
+				"title": "Wisl Configuration",
+				"properties": {
+					"wisl.binaryPath": {
+						"type": "string",
+						"default": "wisl",
+						"description": "Path to the wisl binary used for analysis"
+					}
+				}
+			}
+		]
+	},
 	"main": "./client/out/extension",
 	"scripts": {
 		"vscode:prepublish": "cd client && npm run update-vscode && cd .. && npm run compile",
