--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
 		"postinstall": "node ./node_modules/vscode/bin/install"
 	},
 	"dependencies": {
+		"@types/ws": "^6.0.1",
 		"vscode": "^1.1.21",
-		"vscode-languageclient": "^5.1.0"
+		"vscode-languageclient": "^5.1.0",
+		"ws": "^6.1.2"
 	}
 }
